--- a/app/src/main/res/layout/first_layout.xml
+++ b/app/src/main/res/layout/first_layout.xml
@@ -15,8 +15,9 @@
         android:layout_centerInParent="true"
         android:textSize="40sp"
         android:textStyle="bold"
+        android:textAlignment="center"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="10dp" />
 
 
 
@@ -41,7 +42,31 @@
         android:background="@drawable/btn_shape"
         android:text="@string/Record"/>
 
+    <Button
+        android:id="@+id/button_3"
+        android:layout_width="113dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:background="@drawable/btn_shape"
+        android:text="@string/real" />
 
+    <Button
+        android:id="@+id/button_4"
+        android:layout_width="113dp"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/button_3"
+        android:layout_alignEnd="@+id/button_3"
+        android:layout_alignRight="@+id/button_3"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="-10dp"
+        android:layout_marginLeft="-10dp"
+        android:layout_marginTop="-52dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginBottom="-10dp"
+        android:background="@drawable/btn_shape"
+        android:text="@string/stop" />
 
 
 </RelativeLayout>
