--- a/app/src/main/res/layout/item_time.xml
+++ b/app/src/main/res/layout/item_time.xml
@@ -22,6 +22,7 @@
             android:textStyle="normal" />
 
         <Button
+            android:id="@+id/button_delete"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="center"
