--- a/app/src/main/res/layout/item_time.xml
+++ b/app/src/main/res/layout/item_time.xml
@@ -13,9 +13,9 @@
 
         <TextView
             android:id="@+id/text_view_time"
-            android:layout_width="250dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="0dp"
+            android:layout_width="249dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="30sp"
